# quantum

./: CMakeLists.txt  README.md  example.toml
src/: grid.c  grid.h  main.c
src/basis/: basis.c  basis.h
src/grid/: grid.c  grid.h
src/input/: input.c  input.h  toml.c  toml.h
